Fixed form action

--- a/client/index.html
+++ b/client/index.html
@@ -278,7 +278,7 @@
       <div id="contact-direct">You can contact me via the form below, or access my Email and Phone number via my
         <a href="https://john-kevin.me/cv.pdf">Curriculum Vitae</a>, Or by clicking <a href="#" onclick="showEmail(event)">Here</a>
       </div>
-      <form id="contact-form" method="POST" action="https://john-kevin.me/sendEmail" enctype="multipart/form-data">
+      <form id="contact-form" method="POST" action="/sendEmail" enctype="multipart/form-data">
         <input id="emailinput" type="text" placeholder="Email" onblur="validateEmail(this);" name="email"></input>
         <input id="nameinput" placeholder="Name..." type="text" name="name"></input>
         <input id="subjectinput" type="text" placeholder="Subject" name="subject"></input>
